[gd_scene load_steps=4 format=2]

[ext_resource path="res://archer.png" type="Texture" id=1]
[ext_resource path="res://wave/swift_archer_tower.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="tower" type="Area2D" groups=["archer"]]
script = ExtResource( 2 )

[node name="base" type="Sprite" parent="."]
scale = Vector2( 0.354839, 0.351305 )
texture = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="Aggro" type="Area2D" parent="." groups=["archer"]]
scale = Vector2( 0.861579, 1.48684 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro" groups=["archer"]]
scale = Vector2( 11.8917, 14.2018 )
shape = SubResource( 1 )

[node name="remove_arrow" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="area_entered" from="Aggro" to="." method="_on_Aggro_area_entered"]
[connection signal="area_exited" from="Aggro" to="." method="_on_Aggro_area_exited"]
[connection signal="timeout" from="remove_arrow" to="." method="_on_remove_arrow_timeout"]
